@@ -5,4 +5,5 @@ Jesse Keating <jkeating at redhat dot com>
 Contributors:
 
 Will Woods <wwoods at redhat dot com>
-sien Ita Essien <essien at wazobialinux dot com>
+Essien Ita Essien <essien at wazobialinux dot com>
+James Bowes <jbowes at redhat dot com>
